// Original file: proto/mesh_types.proto

import type { AccountMeshData as _spacemesh_v1_AccountMeshData, AccountMeshData__Output as _spacemesh_v1_AccountMeshData__Output } from '../../spacemesh/v1/AccountMeshData';

export interface AccountMeshDataQueryResponse {
  'data'?: (_spacemesh_v1_AccountMeshData)[];
  'totalResults'?: (number);
}

export interface AccountMeshDataQueryResponse__Output {
  'data': (_spacemesh_v1_AccountMeshData__Output)[];
  'totalResults': (number);
}
