// Original file: proto/mesh_types.proto

import type { SimpleInt as _spacemesh_v1_SimpleInt, SimpleInt__Output as _spacemesh_v1_SimpleInt__Output } from '../../spacemesh/v1/SimpleInt';

export interface MaxTransactionsPerSecondResponse {
  'maxTxsPerSecond'?: (_spacemesh_v1_SimpleInt | null);
}

export interface MaxTransactionsPerSecondResponse__Output {
  'maxTxsPerSecond': (_spacemesh_v1_SimpleInt__Output | null);
}
